<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint_AD"
    tools:context=".FillInTheBlanks_AD">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="421dp"
        android:layout_height="354dp"
        android:contentDescription="@string/childrenthink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@mipmap/kidsquestion_foreground" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="162dp"
        android:layout_height="142dp"
        android:layout_marginStart="125dp"
        android:contentDescription="@string/childrenthink"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724"
        app:srcCompat="@mipmap/kidsquestion_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_title"
        android:textColor="@color/dark_green_AD"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="submitWords"
        android:text="@string/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="163dp"
        android:layout_height="71dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="200dp"
        android:onClick="submitWords"
        android:text="@string/button_submit"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="355dp"
        android:layout_height="232dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="160dp"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/noun"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/dark_green_AD"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/verb"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/dark_green_AD"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/adverb"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/dark_green_AD"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/verb"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/dark_green_AD"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/plural_noun"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/dark_green_AD"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/adverb"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/dark_green_AD"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/adverb"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/dark_green_AD"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/adjective"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/dark_green_AD"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>